--- a/_posts/2023-11-21-post-new.md
+++ b/_posts/2023-11-21-post-new.md
@@ -7,64 +7,63 @@ title: my jungle
 
 
 
-   jungle
+  # jungle
 
 
 
-<h1 style="text-align: center;" font-family: Tahoma; color: coral; background-color: aqua;">draw a jungle</h1>
-<img src="Screenshot 2023-11-10 224515.png" width="200">
+
+<img src="../assets/images/Screenshot 2023-11-10 224515.png">
 
 
- style="font-weight: bold ;" font-size: larger;" dir="ltr"
-<br>this is my code
-<br>import turtle
-<br>import random
 
-<br>def jungle(d,c,p):
-<br>if d < random.randint(3,6)  or c < random.randint(1,2) :
-<br>return
-<br>  turtle.pensize(p)
-<br>   turtle.forward(d)
-<br>   turtle.left(c)
-<br>   jungle(d * (random.random()/2 + 0.5) , c * (random.random()/2 + 0.5) , p * 0.7)
-<br>    turtle.fillcolor("yellow")
-<br>   turtle.begin_fill()
-<br>   turtle.circle(4)
-<br>   turtle.end_fill()
-<br>    turtle.right(c * 2)
-<br>   jungle(d * (random.random()/2 + 0.5) , c * (random.random()/2 + 0.5) , p * 0.7)
-<br>    turtle.left(c)
-<br>    turtle.fillcolor("orange")
-<br>    turtle.begin_fill()
-<br>    turtle.circle(2.5)
-<br>   turtle.end_fill()
-<br>   #jungle(d * (random.random()/2 + 0.5) , c * (random.random()/2 + 0.5))
-<br>    turtle.backward(d)
+<pre>this is my code
+import turtle
+import random
 
-<br>turtle.tracer(0)   
-<br>turtle.left(90)
-<br>for _ in range(10):
-<br>    turtle.penup()
-<br>    turtle.setpos(random.randint(-400,400) , random.randint(-100,100))
-<br>    turtle.pendown()
-<br>    turtle.pencolor("brown")
-<br>    jungle(100,20,7)
+def jungle(d,c,p):
+if d < random.randint(3,6)  or c < random.randint(1,2) :
+return
+  turtle.pensize(p)
+   turtle.forward(d)
+   turtle.left(c)
+   jungle(d * (random.random()/2 + 0.5) , c * (random.random()/2 + 0.5) , p * 0.7)
+    turtle.fillcolor("yellow")
+   turtle.begin_fill()
+   turtle.circle(4)
+   turtle.end_fill()
+    turtle.right(c * 2)
+   jungle(d * (random.random()/2 + 0.5) , c * (random.random()/2 + 0.5) , p * 0.7)
+    turtle.left(c)
+    turtle.fillcolor("orange")
+    turtle.begin_fill()
+    turtle.circle(2.5)
+   turtle.end_fill()
+   #jungle(d * (random.random()/2 + 0.5) , c * (random.random()/2 + 0.5))
+    turtle.backward(d)
 
-<br>for _ in range(30):
-<br>    turtle.penup()
-<br>    turtle.setpos(random.randint(-400,400), random.randint(-150,-90))
-<br>    turtle.fillcolor("orange")
-<br>    turtle.begin_fill()
-<br>   turtle.circle(3)
-<br>   turtle.end_fill()
+turtle.tracer(0)   
+turtle.left(90)
+for _ in range(10):
+    turtle.penup()
+    turtle.setpos(random.randint(-400,400) , random.randint(-100,100))
+    turtle.pendown()
+    turtle.pencolor("brown")
+    jungle(100,20,7)
+
+for _ in range(30):
+    turtle.penup()
+    turtle.setpos(random.randint(-400,400), random.randint(-150,-90))
+    turtle.fillcolor("orange")
+    turtle.begin_fill()
+    turtle.circle(3)
+    turtle.end_fill()
 
 
 
     
-<br>turtle.mainloop()
-<br><a href="file:///C:/git/FC02031/s92/star.html">
-    star f
-</a>
+turtle.mainloop()
+</pre>
+
 
 
 
