--- a/_posts/2023-11-21-post-new.md
+++ b/_posts/2023-11-21-post-new.md
@@ -65,6 +65,39 @@ turtle.mainloop()
 </pre>
 
 
+- and this is my star fractal codes
+
+
+
+star
+
+<img src="../assets/images/Screenshot 2023-11-11 021040.png" width="200">
+
+<br>
+import turtle
+
+
+<pre>def star(d,n):
+   if d < 10 :
+       return
+    
+   for _ in range(n):
+        star(d/5)
+        turtle.forward(d)
+       turtle.right(180 - 180/n)
+    
+
+
+
+star(100,5)
+turtle.mainloop()
+</pre>
+
+I wrote this code using the TURTLE library and I used recursive function in it.
+
+
+
+
 
 
 
